shared/src/test/data/yeast/invalid-json/incomplete-map-1.jyt
BeginDocument       0,  1,  0 ''
BeginMapping        0,  1,  0 '{'
LineBreak           1,  1,  1 '\n'
WhiteSpace          2,  2,  0 '  '
BeginScalar         4,  2,  2 ''
Indicator           4,  2,  2 '\"'
Text                5,  2,  3 'key1'
Indicator           9,  2,  7 '\"'
EndScalar          10,  2,  8 ''
Indicator          10,  2,  8 ':'
WhiteSpace         11,  2,  9 ' '
BeginMapping       12,  2, 10 '{'
LineBreak          13,  2, 11 '\n'
WhiteSpace         14,  3,  0 '    '
BeginScalar        18,  3,  4 ''
Indicator          18,  3,  4 '\"'
Text               19,  3,  5 'key2'
Indicator          23,  3,  9 '\"'
EndScalar          24,  3, 10 ''
Indicator          24,  3, 10 ':'
WhiteSpace         25,  3, 11 ' '
BeginScalar        26,  3, 12 ''
Indicator          26,  3, 12 '\"'
Text               27,  3, 13 'value2'
Indicator          33,  3, 19 '\"'
EndScalar          34,  3, 20 ''
Indicator          34,  3, 20 ','
LineBreak          35,  3, 21 '\n'
LineBreak          36,  4,  0 '\n'
WhiteSpace         37,  5,  0 '  '
BeginScalar        39,  5,  2 ''
Indicator          39,  5,  2 '\"'
Text               40,  5,  3 'key3'
Indicator          44,  5,  7 '\"'
EndScalar          45,  5,  8 ''
WhiteSpace         45,  5,  8 ' '
Indicator          46,  5,  9 ':'
WhiteSpace         47,  5, 10 ' '
BeginScalar        48,  5, 11 ''
Indicator          48,  5, 11 '\"'
Text               49,  5, 12 'value3'
Indicator          55,  5, 18 '\"'
EndScalar          56,  5, 19 ''
LineBreak          56,  5, 19 '\n'
EndMapping         57,  6,  0 '}'
